--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Mapa </title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fontes/museo-300-maisfontes.1aaa.zip">
 </head>
 <body>
   <div class="box">
